--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "Jeff's personal chatbt",
   "main": "index.ts",
   "scripts": {
+    "start": "node bot.js",
     "test": "npm test"
   },
   "author": "Jeff Zhang",
   "license": "ISC",
   "dependencies": {
+    "q": "^1.4.1",
     "qrcode-terminal": "^0.12.0",
-    "wechaty": "^0.15.3"
+    "wechaty": "^0.15.3",
+    "tingodb": "^0.4.2"
   }
 }
